--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://github.com/SINISTER-RULES/samarth-joseph-resume/blob/main/current_resume_2.0.pdf" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://github.com/SINISTER-RULES/samarth-joseph-resume" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
